# travel-pinboard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
tests/: main_test.py
travel_pinboard/: main.py
